Flickable: don't grab on press if already moving

But rather cancelInteraction(). The Flickable stops moving, as before,
which feels like correct "physics"; but the tap is also often meant for
a delegate or something inside.

As a drive-by, optimize slightly: check e->isPointerEvent() and do the
casting only once.

Fixes: QTBUG-103832
Change-Id: I16cb670a06d94b53e56dd85c910becf747a75f8a
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
(cherry picked from commit 9f9ea6e1837620a0ff4b98e262cba2df44215967)
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>